Archive2/64/5eb499a5ae3e9a/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:39:27: error: expected primary-expression before ‘)’ token
     myprintf("Ciccio %",  );
                           ^
